src/app/phase-team-response/phase-team-response.component.css
.container {
  display: block;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.title {
  color: black;
  margin: 0;
  padding: 30px 20px;
}

.mat-raised-button {
  margin-left: 20px;
  margin-bottom: 20px;
}

.mat-accordion .mat-expansion-panel {
  margin-bottom: 10px;
}

.search-bar {
  pointer-events: auto;
}

.align-header {
  display: flex;
  align-items: baseline;
}

.mat-expansion-panel-header-title {
  font-size: x-large;
  align-self: center;
}

.mat-expansion-panel-header-description {
  display: inline-grid;
  grid-template-columns: 1fr 1fr;
}

.mat-column-actions {
  width: 80px;
  text-align: center;
}

.mat-column-id {
  width: 10%;
}

.mat-column-title {
  width: 40%;
}

.mat-column-type {
  width: 30%;
}

.mat-column-severity {
  width: 12%;
}

